--- a/stylo.css
+++ b/stylo.css
@@ -7,46 +7,150 @@
 body{
     color: white;
 }
-.header{
+.nb {
     position: fixed;
     top: 0;
     left:0;
     width: 100%;
     padding: 20px 10%;
     background: transparent;
-    display: flex;
+    display: inline-block;
     justify-content: space-around;
     align-items: center;
     z-index: 100;
+   
 }
+
 .logo{
+    margin-bottom: 500px;
+    margin-left: 50px;
     position: relative;
-    font-size: 25px;
-    color:blueviolet;
-    text-decoration: none;
+    font-size: 40px;
+    color:fuchsia;
+    text-decoration:solid;
     font-weight: 600;
+    opacity: 0;
+    animation: slideRight 1s ease forwards;
 }
 .navbar a{
-    display: inline-block;
-    color:blueviolet;
-    font-size: 25px;
-    text-decoration: none;
-    font-weight: 500;
-    margin-left: 35px;
+    display:flexbox;
+    justify-content: space-around;
+    align-items: flex-end;
+    color:fuchsia;
+    font-size: 28px;
+    text-decoration: none;  
+    font-weight:bold;
+    margin-left: 150px;
     transition: .3s;
+    opacity: 0;
+    animation: slideTop .5s ease forwards;
+    animation-delay: .7s;
 }
 .navbar a:hover{
-    color: lightpink;
+    color: plum;
+    text-shadow: 0 0 20px plum,
+    0 0 40px plum, 0 0 80px plum;
 }
 .home{
     position: relative;
     justify-content: space-between;
     width: 100%;
     height: 100vh;
-    background: url("./purpleBG.jpg") no-repeat;
-    background-position: center;
-    background-size: cover;
+    background: url("./line1.jpg") no-repeat;
+    background-size:cover;
+    min-height: 100%;
+    background-position: center; 
     display: flex;
     align-items: center;
     padding: 70px 10% 0;
+}
+.home-content{
+    max-width: 600px;
+}
+.home-content h3{
+font-size: 32px;
+font-weight: 700;
+opacity: 0;
+animation: slideBottom 1s ease forwards;
+animation-delay: .7s;
+}
+.home-content h3:nth-of-type(2){
+    margin-bottom: 30px;
+}
+.home-content h3 span{
+    color:fuchsia;
+    text-shadow: 0 0 20px plum;
+}
+.home-content h1{
+    font-size: 56px;
+    font-weight: 700;
+    margin: -3px 0;
+}
+.home-content p{
+    font-size: 20px;
+}
+.home-sci a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    background:transparent;
+    border: 2px solid plum;
+    border-radius: 50%;
+    font-size: 20px;
+    color: plum;
+    text-decoration: none;
+    margin: 30px 15px 30px 0;
+}
+.home-sci a:hover{
+    background-color: rgb(249, 118, 249);
+    color:indigo;
+    box-shadow: 0 0 20px rgb(249, 118, 249);
+}
+.btn-box{
+    display:inline-block;
+    padding: 12px 20px;
+    background: rgb(238, 78, 238);
+    border-radius: 40px;
+    font-size: 16px;
+    color: indigo;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+}
+.btn-box:hover{
+    box-shadow: 0 0 20px plum,
+    0 0 40px plum, 0 0 80px plum,
+    0 0 160px plum;
+}
+@keyframes slideRight{
+    0% {
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+@keyframes slideTop{
+    0% {
+        transform: translateX(0px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(100px);
+        opacity: 1;
+    }
+}
+ @keyframes slideBottom{
+    0% {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    } 
 }
